--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Roboto, sans-serif;
+    /* align-items: center; */
 }
 
 .header {
@@ -10,13 +11,10 @@ body {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: 900;
-    padding: 20px 200px;
-    justify-content: space-between;
+    padding: 20px;
+    justify-content: center;
+    gap: 420px;
 }
-
-/* .header-links {
-    margin-left: auto;
-} */
 
 ul {
     padding: 0px;
@@ -41,7 +39,7 @@ a {
 .hero {
     display: flex;
     background-color: #1F2937;
-    padding: 100px 200px;
+    padding: 100px;
     gap: 48px;
     justify-content: center;
     align-items: center;
@@ -78,4 +76,49 @@ button {
     border: none;
     flex: 0 0;
     padding: 10px 28px;
+}
+
+.body-title-text {
+    font-size: 40px;
+    color: #1F2937;
+    font-weight: 900;
+    text-align: center;
+    padding: 50px;
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    margin-bottom: 160px;
+}
+
+.card.image {
+    border: 8px solid #3882F6;
+    border-radius: 24px;
+    width: 160px;
+    height: auto;
+}
+
+.card {
+    display: flex;
+    gap: 6px;
+    flex-direction: column;
+    text-align: center;
+    font-size: 18px;
+    color: #1F2937;
+    flex: 0 1 160px;
+}
+
+.quote.container {
+    align-self: center;
+    padding: 160px;
+    background-color: #E5E7EB;
+}
+
+.quote-text {
+    width: 600px;
+    font-size: 36px;
+    color: #1F2937;
 }
