--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Roboto, sans-serif;
-    /* align-items: center; */
+    margin: 0px
+        /* align-items: center; */
 }
 
 .header {
@@ -91,7 +92,7 @@ button {
     flex-wrap: wrap;
     justify-content: center;
     gap: 40px;
-    margin-bottom: 160px;
+    margin-bottom: 140px;
 }
 
 .card.image {
@@ -112,13 +113,58 @@ button {
 }
 
 .quote.container {
-    align-self: center;
-    padding: 160px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: stretch;
+    padding: 140px 0px;
     background-color: #E5E7EB;
 }
 
 .quote-text {
-    width: 600px;
+    width: 760px;
     font-size: 36px;
     color: #1F2937;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.quote-attribution {
+    color: #1F2937;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 450px;
+}
+
+.signup.container {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    width: 700px;
+    padding: 50px 120px;
+    align-self: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    margin: 90px;
+}
+
+.signup-header-text {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.bottom-signup {
+    border-style: solid;
+    border-color: #F9FAF8;
+    padding: 6px 36px;
+    font-size: 18px;
+    height: fit-content;
+}
+
+.footer {
+    background-color: #1F2937;
+    color: #E5E7EB;
+    text-align: center;
+    padding: 40px 0px;
 }
